# day-scheduler

./: CMakeLists.txt  README.md  main.c
inc/: dsched.h
src/: dsched.c
tests/: test_sched.c
